--- a/frontend/src/app/events/events.component.html
+++ b/frontend/src/app/events/events.component.html
@@ -1,5 +1,4 @@
-<h2>Events</h2>
-<!-- <ul class="heroes">
+<!-- <ul class="events">
     <li>
         Event Type <span class="badge">Count</span>
     </li>
